# adversary-planner

./: .gitignore  README.md  e2e_test.py  next.config.ts  package.json  pyproject.toml  requirements.txt
adversary_planner/: __init__.py  calibration.py  campaign.py  catalog.py  cli.py  exceptions.py  importer.py  mapping.py  models.py  planner.py  reporter.py
api/: index.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  DATA_MODELS.md  FRONTEND.md  TECHNIQUE_CATALOG.md
examples/: e2e_report.md  report.md  sample_garak_report.jsonl  target.yaml
src/app/: globals.css  layout.tsx  page.tsx
src/app/campaign/: page.tsx
src/app/techniques/: page.tsx
src/components/: sidebar.tsx
src/lib/: api.ts
tests/: conftest.py  test_calibration.py  test_campaign.py  test_importer.py  test_planner.py
